--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  config:
+    import: classpath:application-secret.yml
   datasource:
     url: jdbc:mysql://localhost:3306/toucheese_db
     username: root
