[Notification] 예약 메세지 송신 기능 구현 - 회원 적용 (#50)
* feat: 메세지 송신 기능 회원 적용

* refactor: SolapiUtil의 설정 분리를 위한 SolapiConfig 추가

* refactor: sendMessageForLoggedInUser 메서드 책임 분리

* refactor: token 추출 로직 분리

* feat: message 전송 기능 principal 로 구현

* feat: 이메일 송신 로직 구현

* feat: build.gradle 의존성 추가

* refactor: 상수 규칙 지키기

* refactor: 상수 활용

* refactor: sendMessageForLoggedInUser 메소드 메세지 발송 분리

* feat: 이메일 형식 관련 예외 처리

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -67,6 +68,10 @@ dependencies {
 
 	//Solapi
 	implementation 'net.nurigo:sdk:4.3.2'
+
+	// JavaMail dependencies for email sending
+	implementation 'javax.mail:javax.mail-api:1.6.2'
+	runtimeOnly 'com.sun.mail:javax.mail:1.6.2'
 }
 
 // QueryDSL Setting
