[Image] 이미지 로딩 속도 개선 (#51)
* chore: application 설정 gitignore 추가

* feat: S3 의존성 및 설정 추가

* merge: dev pull 및 충돌 해결

* merge: 누락 파일 추가

* refactor: 업로드 경로 수정

* refactor: StudioImage 컬럼명 수정

* refactor: Studio 반환 형식 변경

* comment: 파일 업로드 관련 주석 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,7 @@
 spring:
-  config:
-    import: classpath:application-secret.yml
-  datasource:
-    url: jdbc:mysql://localhost:3306/toucheese_db
-    username: root
-    password:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-
+  profiles:
+    active: dev
+    include: secret
   jpa:
     hibernate:
       ddl-auto: update
