예약 및 장바구니 기능 구현 (#53)
* build: Spring Security 추가 및 빌드 파일 정리

* chore: 설정 파일 업데이트

* feat: Spring Security 설정 및 JWT Filter, Provider 정의

* feat: 회원 Entity 추가

* feat: 회원 로그인 기능 구현

* feat: 토큰 Entity 추가

* feat: 토큰 관리 기능 구현

* feat: ToucheeseTokenInvalidException, ToucheeseUnAuthorizedException 추가

* feat: 요청 API 허용 설정 추가

* comment: 메서드 주석 추가

* refactor: token expiration 설정 파일로 분리

* refactor: accessToken 갱신 시 응답 헤더에 포함

* refactor: 응답 형식 통합 및 정형화 (ApiResponse 추가)

* refactor: username -> email로 변경

* refactor: 토큰 검증 로직 변경
 - ACCEPTED, EXPIRED, DENIED로 분류
 - 만료 시 헤더로 재갱신 된 토큰 전달
 - 검증과 파싱 분리

* refactor: 로그인 시 응답 형식 변경

* refactor: addAllowedOrigin에 개발환경 추가

* refactor: CORS 설정 추가 / Authorization 헤더 접근 허용

* feat : 이름, 전화번호 필드 -> MemberId로 변경

* feat : 장바구니 기능 구현 - Create

장바구니 Create 기능 구현
Swagger 설명 추가

* feat : 장바구니 목록 조회 기능 구현

* feat : 장바구니 삭제 기능 구현, 엔드포인트 변경

* feat : 장바구니 옵션, 인원 업데이트 기능 구현

* refactor : PatchMapping -> PutMapping으로 변경 장바구니

* feat : principal 기능 추가

* feat : SwaggerConfig 추가, yml 분리

* chore :  Change active Spring profile from dev to prod

* chore: Add application-secret.yml to .gitignore

* feat : 장바구니 업데이트 기능 principal 적용

해당 회원만 장바구니 업데이트 가능

* feat : CartResponse cartId 추가

* docs : 필드추가에 따른 swagger 수정 getCartList

* feat : 회원 정보 기능 구현

* feat : 장바구니 리스트 조회 시 상품 이미지 필드 추가

* feat : 장바구니 리스트 studioImage 필드 추가

* feat : 장바구니 저장 기능 memberId를 principal로 구현

* feat : 장바구니 조회 기능중 옵션 부분 추가 구현

장바구니 옵션 변경할때 기준이 되는 상품 정보가 없기에 추가로 넣었습니다.

* feat : 상품 가격 필드 추가

* feat : toCsv null or 비었을 경우 빈 값 출력

* feat : 상품 결제 조회화면 및 장바구니 데이터를 예약 테이블로 복사 후 삭제 기능 구현

장바구니 데이터를 예약테이블로 복사 후 삭제하는 기능 구현

* feat : 결제 완료시 문자 + 이메일 기능 연동 구현

* feat : reservationCompletedAt 타임존 서울 설정

* build : mail 보내기 관련 의존성 추가

* feat : LocalTime 초단위 삭제

* feat : 예약 관련 회원 인증 기능 추가

isAuthenticated() 추가

* feat : 결제 완료시 문자, 이메일 전송 비동기처리

* build : tx 의존성 추가 / refactor : 현재 사용하지 않는 기

--- a/build.gradle
+++ b/build.gradle
@@ -73,8 +73,10 @@ dependencies {
 	implementation 'net.nurigo:sdk:4.3.2'
 
 	// JavaMail dependencies for email sending
-	implementation 'javax.mail:javax.mail-api:1.6.2'
-	runtimeOnly 'com.sun.mail:javax.mail:1.6.2'
+	implementation 'jakarta.mail:jakarta.mail-api:2.1.1'
+	runtimeOnly 'com.sun.mail:jakarta.mail:2.0.1'
+
+	implementation 'org.springframework:spring-tx'
 }
 
 // QueryDSL Setting
