[Image] 이미지 업로드 기능 리팩토링 (#66)
* chore: multipart 업로드 제한 추가

* refactor: 이미지 정보 분리

* refactor: 불필요한 조회로직 제거

* refactor: Multipartfile 업로드 방식 지원하도록 변경

* refactor: 퍼사드 패턴 적용

* comment: 메서드 네이밍 및 주석 수정

* breaking change: API 엔드포인트 변경 (RequestParam -> PathVariable)

* comment: 주석 추가

* refactor: Question 응답 형식 수정

* refactor: 연관관계 설정 변경

* refactor: 잘못 설정 된 이미지 타입 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,10 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  servlet:
+    multipart:
+      max-file-size: 5MB # 한개 파일의 최대 사이즈 (default: 1MB)
+      max-request-size: 25MB # 한개 요청의 최대 사이즈 (default: 10MB)
 
 springdoc:
   api-docs:
