소셜 로그인 기능 구현 [ 카카오 ] (#70)
* feat : 카카오 로그인 기능 구현

* feat : Member 엔티티 Builder.Default추가

* feat : 스프링시큐리티 POST 인증 제외

* chore: multipart 업로드 제한 추가

* refactor: 이미지 정보 분리

* refactor: 불필요한 조회로직 제거

* refactor: Multipartfile 업로드 방식 지원하도록 변경

* feat : request platform 추가 idToken NotBlank 제거, response memberId, refreshToken, deviceId 추가

* feat : Member 업데이트 기능 추가

* refactor : url 변경

* refactor: 퍼사드 패턴 적용

* comment: 메서드 네이밍 및 주석 수정

* fix : 카카오 access토큰이 아닌 내부 jwt access토큰으로 변경

* feat : POST code 받아오기 기능 구현

* breaking change: API 엔드포인트 변경 (RequestParam -> PathVariable)

* comment: 주석 추가

* refactor: Question 응답 형식 수정

* refactor : 불필요한 메서드 삭제

* refactor : 문의하기 타임존 설정

* fix : 토큰 중복 발급, 토큰 발급시 디바이스id으로 검색

* feat : 첫 로그인 필드 변경 추가

* performance : 캘린더 조회 성능 개선

* refactor : idToken추가, 코드 중복 제거

* refactor : 불필요한 log 삭제

* feat : API Swagger 설명 추가

* refactor : 캘린더 term 적용

* refactor : 장바구니 삭제 기능 parameters 설명추가

* refactor : 검증 부분 메서드로 분리

* refactor : SlotUtils 검증 부분 메서드로 분리

* refactor : 불필요한 검증 로직 제거

* fix : 질문하기, 답변하기 기능 수정

---------

Co-authored-by: ppusda <ppusda1234@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,9 @@ dependencies {
 	runtimeOnly 'com.sun.mail:jakarta.mail:2.0.1'
 
 	implementation 'org.springframework:spring-tx'
+
+	// webflux
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 }
 
 // QueryDSL Setting
